--- a/front-end/src/app/pages/icms/icms-regras-de-processamento/icms-regras-de-processamento.component.html
+++ b/front-end/src/app/pages/icms/icms-regras-de-processamento/icms-regras-de-processamento.component.html
@@ -2,17 +2,22 @@
 
     <h1>ICMS - Notas Processadas</h1>
 
-    <a routerLink="/icms/empresa-form" routerLinkActive="active"  class="link-top">
+    <a routerLink="#" routerLinkActive="active"  class="link-top">
         <nz-card [nzHoverable]="true" class="empresa scrollbar">
           <div class="card ">
                     <div class="name">
+                      <div class="empresa-name">
                         <img src="../../../assets/svgs/empresa.svg" class="logo-empresa">
                         <nz-flex  class="empresa-name">
                             <h3>Recol Distribuição e Comércio LdivA</h3>
                         </nz-flex>
-                        <nz-flex [nzVertical]="false" class="empresa-name">
-                            <h3>Arquivo XML:</h3>
-                            <p>csosn101.xml</p>
+                      </div>
+                        <nz-flex [nzVertical]="false" class="detalhes-nota">
+                          <h3 class="titulo">Arquivo XML:</h3>
+                          <select name="select">
+                            <option value="1"class="titulo-desc">csosn101.xml</option>
+                            <option value="2"class="titulo-desc">csosn102.xml</option>
+                          </select>
                         </nz-flex>
                     </div>
                 <div class="empresa-dados-maior" *ngFor="let item of empresas">
@@ -84,6 +89,12 @@
                         </ng-container>
                     </div>
           </div>
+          <div class="paginacao">
+            <nz-pagination [nzPageIndex]="paginaIndex" [nzTotal]="total" nzShowSizeChanger [nzPageSize]="paginaTamanho"
+                (nzPageIndexChange)="atualizarPagina($event)" (nzPageSizeChange)="tamanhoPagina($event)"
+                [nzPageSizeOptions]=[5,10,20,30,40,50]>
+            </nz-pagination>
+        </div>
         </nz-card>
     </a>
 
