Feat: Implementação das telas de CRUD de multiplicadores e de estados
Refatoração básica no banco de dados(produtos_estados foi removida e a informação foi acrescentada na tabela de multiplicadores), implementação dos cruds restantes relacionados ao adm

--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -10,6 +10,14 @@
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
                     Alíquotas
                 </li>
+                <li nz-menu-item routerLink="/adm/estados" routerLinkActive="active">
+                    <span nz-icon nzType="credit-card" nzTheme="outline"></span>
+                    Estados
+                </li>
+                <li nz-menu-item routerLink="/adm/multiplicadores" routerLinkActive="active">
+                    <span nz-icon nzType="credit-card" nzTheme="outline"></span>
+                    Multiplicadores
+                </li>
             </ul>
         </nz-sider>
         <nz-content class="content">
