--- a/front-end/src/app/pages/adm/multiplicadores-form/multiplicadores-form.component.html
+++ b/front-end/src/app/pages/adm/multiplicadores-form/multiplicadores-form.component.html
@@ -1,1 +1,96 @@
-<p>multiplicadores-form works!</p>
+<form nz-form class="form-cadastrar">
+    <nz-row [nzGutter]="[24, 0]">
+
+        <nz-col nzXs="24" nzMd="12" nzLg="8">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">Produto</nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Selecionar Origem" [(ngModel)]="multiplicador.produto" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="this.editavel">
+                        <nz-option [nzLabel]="'Todos'" [nzValue]="1"></nz-option>
+                        <nz-option *ngFor="let produto of produtos" [nzLabel]="produto.ncm" [nzValue]="produto"></nz-option>
+                    </nz-select>
+                    <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="multiplicador.produto.ncm" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="!this.editavel" [disabled]="true"/>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        
+        <nz-col nzXs="24" nzMd="12" nzLg="8">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">Aliquota</nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Selecionar Origem" [(ngModel)]="multiplicador.aliquota" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="this.editavel">
+                        <nz-option [nzLabel]="'Todos'" [nzValue]="1"></nz-option>
+                        <nz-option *ngFor="let aliquota of aliquotas" [nzLabel]="aliquota.origem.uf + '->' + aliquota.destino.uf" [nzValue]="aliquota"></nz-option>
+                    </nz-select>
+                    <input nz-input nz-col nzSize="large" nzSpan="24" [(ngModel)]="multiplicador.aliquota" [ngModelOptions]="{standalone: true}" ngDefaultControl *ngIf="!this.editavel" [disabled]="true"/>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+
+        <nz-col nzXs="24" nzSm="8">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">Aliquota Interna</nz-form-label>
+                <nz-form-control nzSpan="24">
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="multiplicador.aliquotaInternaEmit" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+
+        <nz-col nzXs="24" nzSm="8" nzLg="6">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">MVA Original</nz-form-label>
+                <nz-form-control nzSpan="24">
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="multiplicador.mvaOriginal" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+
+        <nz-col nzXs="24" nzSm="8" nzLg="6">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">MVA Ajustado</nz-form-label>
+                <nz-form-control nzSpan="24">
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="multiplicador.mvaAjustada" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+
+        <nz-col nzXs="24" nzSm="12" nzLg="6">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">Multiplicador Original</nz-form-label>
+                <nz-form-control nzSpan="24">
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="multiplicador.multiplicadorOriginal" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+
+        <nz-col nzXs="24" nzSm="12" nzLg="6">
+            <nz-form-item>
+                <nz-form-label nzSpan="24">Multiplicador Ajustado</nz-form-label>
+                <nz-form-control nzSpan="24">
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="multiplicador.multiplicadorAjustado" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        
+        <nz-col nzSpan="24">
+            <nz-row nzJustify="end">
+                <button nz-button [nzSize]="'large'" nzType="primary" class="botao botaoAdicionar" (click)="submit()">Adicionar</button>
+            </nz-row>
+        </nz-col>
+    </nz-row>
+</form>
